tests/error/compile/circular_include.wks
# @desc: Circular include detection
# @expect-error: does not support circular includes

# This is not allowed.
:include "circular_include_test.wks"
